# uprava

./: .gitlab-ci.yml  Cargo.toml  Changelog.org  README.org
etc/: centos.spec  uprava.example.yaml
src/: authentication.rs  config.rs  confluence.rs  confluence_content_get.rs  confluence_content_update.rs  confluence_types.rs  jira.rs  jira_types.rs  main.rs  printer.rs  report.rs  report_confluence_roadmap.rs  report_data.rs  report_dependency_graph.rs  report_roadmap.rs  report_storypoints.rs  report_worklog.rs  serde.rs
